<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round" android:id="@+id/iv_summary"
            android:layout_marginTop="@dimen/spacing_default"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/spacing_default" android:layout_marginStart="@dimen/spacing_default"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/spacing_default"
            android:layout_marginRight="@dimen/spacing_default" android:layout_marginBottom="@dimen/spacing_default"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.3"
            android:contentDescription="@string/summary_picture"/>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btn_next_summary"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/spacing_buttons_overall"
            android:layout_marginRight="@dimen/spacing_buttons_overall" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/spacing_buttons_overall"
            android:layout_marginStart="@dimen/spacing_buttons_overall"
            android:layout_marginBottom="@dimen/spacing_buttons_overall"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="0dp" android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/iv_summary" app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginTop="@dimen/spacing_big" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/spacing_default" android:layout_marginRight="@dimen/spacing_default"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/single_word_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="0dp" android:id="@+id/tv_name_summary" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/spacing_default" android:layout_marginRight="@dimen/spacing_default"
            app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginLeft="@dimen/spacing_default"
            android:layout_marginStart="@dimen/spacing_default" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="@+id/textView" app:layout_constraintBottom_toBottomOf="@+id/textView"/>
    <TextView
            android:text="@string/area_of_expertise"
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView2"
            android:layout_marginTop="@dimen/spacing_default" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/spacing_default"
            android:layout_marginRight="@dimen/spacing_default" app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/single_word_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_expertise_summary"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/spacing_default"
            android:layout_marginRight="@dimen/spacing_default" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginLeft="@dimen/spacing_default" android:layout_marginStart="@dimen/spacing_default"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"/>
    <TextView
            android:text="@string/years_of_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:layout_marginTop="@dimen/spacing_default"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/spacing_default" android:layout_marginStart="@dimen/spacing_default"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/spacing_default"
            android:layout_marginRight="@dimen/spacing_default"
            app:layout_constraintHorizontal_bias="0.25"/>
    <TextView
            android:text="@string/single_word_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_experience_summary"
            android:layout_marginLeft="@dimen/spacing_default" android:layout_marginStart="@dimen/spacing_default"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/spacing_default" android:layout_marginRight="@dimen/spacing_default"
            app:layout_constraintStart_toEndOf="@+id/textView3" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="@+id/textView3" app:layout_constraintBottom_toBottomOf="@+id/textView3"/>
</androidx.constraintlayout.widget.ConstraintLayout>